syntax = "proto3";

message ColumnIndex {
  int32 level = 1;
  int64 startPtr = 2;
  int64 endPtr = 3;
  WindowRange range = 4;
  int64 startMzListPtr = 5;
  int64 endMzListPtr = 6;
  int64 startRtListPtr = 7;
  int64 endRtListPtr = 8;
  int64 startSpecrtaIdListPtr = 9;
  int64 endSpecrtaIdListPtr = 10;
  int64 startIntensityListPtr = 11;
  int64 endIntensityListPtr = 12;
  repeated int32 mzs = 13;
  repeated int32 rts = 14;
  repeated int32 spectraIds = 15;
  repeated int32 intensities = 16;
  repeated int64 anchors = 17;
}

message WindowRange {
  double start = 1;
  double end = 2;
  double mz = 3;
  int32 charge = 4;
  string features = 5;
}